# milkman-monte-carlo

./: .gitignore  pyproject.toml
milkman_monte_carlo/: mc.py  sim.py
tests/: test_milkman_monte_carlo.py
