[tool.poetry]
name = "milkman-monte-carlo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.8"
numpy = "^1.21.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.10b0"
flake8 = "^4.0.1"
notebook = "^6.4.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
